--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </p>
     <h2>Current todo list</h2>
     <p>Filter: <input type="text" id="todoFilter" title="Filter for the
-   todo list" /></p>
+   todo list" onkeyup="filterTodoList()" onblur="filterTodoList()"/></p>
     <div id="todoListContainer">Nothing to do, hurray!</div>
     <script type="text/javascript" src="todo.js"></script>
 </body>
